# eInvoiceReader

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
scripts/: build_windows.cmd  build_windows.ps1  run_dev_windows.cmd  run_dev_windows.ps1
tests/: test_frontend_support.py  test_reader.py  test_xml_view.py
xrechnung_app/: __init__.py  app.py  formatting.py  launcher.py  main.py  processes.py  state.py  xml_view.py
xrechnung_reader/: __init__.py  cli.py  models.py  parser.py  pdf.py  render.py
xrechnung_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
xrechnung_reader/templates/: invoice.html.j2
